[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/gameOver.gd" type="Script" id=1]
[ext_resource path="res://fonts/connection_ii/ConnectionII.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/connection_ii/ConnectionII_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://sprites/Space_Background.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.145098, 0.207843, 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
margin_right = 560.0
margin_bottom = 800.0
texture = ExtResource( 4 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 560.0
margin_bottom = 800.0
custom_constants/margin_right = 40
custom_constants/margin_top = 80
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 80.0
margin_right = 520.0
margin_bottom = 760.0
custom_constants/separation = 220

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
margin_right = 480.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0.0901961, 0.811765, 0.870588, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Player 1 WIN!"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
margin_top = 285.0
margin_right = 480.0
margin_bottom = 562.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
margin_left = 154.0
margin_right = 325.0
margin_bottom = 277.0
custom_constants/separation = 80

[node name="restart" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_right = 171.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = " RESTART "

[node name="menu" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 171.0
margin_bottom = 158.0
custom_fonts/font = ExtResource( 3 )
text = " MENU "

[node name="quit" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 171.0
margin_bottom = 277.0
custom_fonts/font = ExtResource( 3 )
text = "QUIT"

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
